Fix color picking lag and a crash when picking color right after Undo

1) The connection between two strategies should be Direct, because the
   Lod0 strategy doesn't have an event queue.
2) Pick the color all the time, even when the mouse button is already
   released
3) Update the color when the preview is shown, not when the stroke is
   active.

BUG:362730
Fixes T2435